--- a/Gingerbread/Views/ViewExportXML.xaml
+++ b/Gingerbread/Views/ViewExportXML.xaml
@@ -24,7 +24,7 @@
             <RowDefinition Height ="35"/>
             <RowDefinition Height ="5"/>
         </Grid.RowDefinitions>
-        
+
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10 10 10 5">
             <StackPanel Orientation="Vertical">
                 <GroupBox Header="Header Info" Padding="5" Width="200" Height="185">
@@ -141,7 +141,7 @@ will be aligned to an axis. Please set this value according to the average&#x0a;
                         <TextBox Grid.Column="5" Name="Zcoord" Padding="2" 
                                  Text="{Binding Source={x:Static p:Settings.Default}, Path=originZ, Mode=TwoWay}" Margin="2"/>
                     </Grid>
-                    
+
                 </GroupBox>
 
                 <StackPanel Margin="0 10 5 5">
@@ -188,30 +188,74 @@ substract the atrium or shaft from your massing if it is exposed to outdoors.">
             </StackPanel>
 
 
-            <GroupBox Header="Preview" Margin="5 0 0 0" Padding="3" Width="700">
-                    <GroupBox.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding}" FontSize="12" Foreground="Gray" />
-                        </DataTemplate>
-                    </GroupBox.HeaderTemplate>
-                    <Grid Name="ViewPort">
-                        <wpf:ChromiumWebBrowser Address="{Binding Source={x:Static p:Settings.Default}, Path=spiderPath, Mode=OneWay}"/>
-                    </Grid>
-                </GroupBox>
-            </StackPanel>
+            <GroupBox Header="Preview" Margin="5 0 0 0" Padding="4 -15 0 -4" Width="700" BorderThickness="0">
+                <GroupBox.HeaderTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}" FontSize="12" Foreground="Gray" />
+                    </DataTemplate>
+                </GroupBox.HeaderTemplate>
+                <TabControl>
+                    <TabControl.Resources>
+                        <Style TargetType="TabPanel">
+                            <Setter Property="HorizontalAlignment" Value="Right"/>
+                        </Style>
+                    </TabControl.Resources>
+                    <TabItem Header="Floorplan">
+                        <Grid Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="4*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid Name="prevBox" Grid.Column="0">
+                                <Canvas Name="prevCanvas">
+                                    <TextBlock Name="prevNote"></TextBlock>
+                                </Canvas>
+                            </Grid>
+                            <Grid Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="20"/>
+                                    <RowDefinition Height="6"/>
+                                    <RowDefinition Height="20"/>
+                                    <RowDefinition Height="6"/>
+                                    <RowDefinition Height="20"/>
+                                    <RowDefinition Height="6"/>
+                                    <RowDefinition Height="1*"/>
+                                </Grid.RowDefinitions>
+                                <Button Grid.Row="0" Name="btnPreview" Content="Preview" Click="BtnPreview" IsEnabled="True"/>
+                                <CheckBox IsChecked="{Binding Source={x:Static p:Settings.Default}, Path=drawPrev, Mode=TwoWay}" 
+                                          Grid.Row="2" x:Name="DrawPrev" Checked ="DrawPrev_Checked" Unchecked ="DrawPrev_Unchecked">
+                                    Draw previous floor</CheckBox>
+                                <CheckBox IsChecked="{Binding Source={x:Static p:Settings.Default}, Path=drawWall, Mode=TwoWay}" 
+                                          Grid.Row="4" x:Name="DrawWall" Checked ="DrawWall_Checked" Unchecked ="DrawWall_Unchecked">
+                                    Draw partitions</CheckBox>
+                                <ListBox Grid.Row="6" BorderThickness="1 0 0 0" Name="layerList"
+                                         PreviewMouseDown="layerList_PreviewMouseDown"></ListBox>
+                            </Grid>
+                        </Grid>
+                    </TabItem>
+                    <TabItem Header="3D-Aragog">
+                        <Grid Name="ViewPort">
+                            <wpf:ChromiumWebBrowser Address="{Binding Source={x:Static p:Settings.Default}, Path=spiderPath, Mode=OneWay}"/>
+                        </Grid>
+                    </TabItem>
+                </TabControl>
+
+            </GroupBox>
+        </StackPanel>
 
         <Grid Grid.Row="1" Margin="5">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="187*"/>
+                <ColumnDefinition Width="573*"/>
                 <ColumnDefinition Width="75"/>
                 <ColumnDefinition Width="75"/>
                 <ColumnDefinition Width="10"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" x:Name="txtState" VerticalAlignment="Center" Margin="5 0 5 0"/>
-            <TextBlock Grid.Column="0" x:Name="txtUpdate" Text="{Binding CurrentContext}" VerticalAlignment="Center" Margin="5 0 5 0" Visibility="Collapsed" />
-            <Button Grid.Column="1" x:Name="btnGenerate" Content="Generate" Click="BtnGenerate" Margin="0 0 5 5"/>
-            <Button Grid.Column="1" x:Name="btnCancel" Content="Cancel" Click="BtnCancel" Visibility="Collapsed" IsCancel="True" Margin="0 0 5 5"/>
-            <Button Grid.Column="2" Content="Save as" Click="BtnSaveAs" Margin="5 0 0 5"/>
+            <TextBlock Grid.Column="0" x:Name="txtState" VerticalAlignment="Center" Margin="5,0,5,0" Grid.ColumnSpan="2"/>
+            <TextBlock Grid.Column="0" x:Name="txtUpdate" Text="{Binding CurrentContext}" VerticalAlignment="Center" Margin="5,0,5,0" Visibility="Collapsed" Grid.ColumnSpan="2" />
+            <Button Grid.Column="2" x:Name="btnGenerate" Content="Generate" Click="BtnGenerate" Margin="0 0 5 5"/>
+            <Button Grid.Column="2" x:Name="btnCancel" Content="Cancel" Click="BtnCancel" Visibility="Collapsed" IsCancel="True" Margin="0 0 5 5"/>
+            <Button Grid.Column="3" Content="Save as" Click="BtnSaveAs" Margin="5 0 0 5"/>
         </Grid>
 
         <Grid Grid.Row="2">
