--- a/Gingerbread/Views/ViewExportXML.xaml
+++ b/Gingerbread/Views/ViewExportXML.xaml
@@ -234,8 +234,24 @@ substract the atrium or shaft from your massing if it is exposed to outdoors.">
                         </Grid>
                     </TabItem>
                     <TabItem Header="3D-Aragog">
-                        <Grid Name="ViewPort">
-                            <wpf:ChromiumWebBrowser Address="{Binding Source={x:Static p:Settings.Default}, Path=spiderPath, Mode=OneWay}"/>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="5"/>
+                                <RowDefinition Height="21"/>
+                                <RowDefinition Height="1*"/>
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="1">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="170"/>
+                                    <ColumnDefinition Width="5"/>
+                                </Grid.ColumnDefinitions>
+                                <Button Grid.Column="1" Click="BtnOpenAragog">Open Aragog in browser</Button>
+                            </Grid>
+                            <Grid Name="ViewPort" Grid.Row="2">
+                                <wpf:ChromiumWebBrowser Address="{Binding Source=
+                                    {x:Static p:Settings.Default}, Path=spiderPath, Mode=OneWay}"/>
+                            </Grid>
                         </Grid>
                     </TabItem>
                 </TabControl>
